--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body{
     width: 100%;
     height: 100%;
     background-color: rgb(11, 16, 67,0.3);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
     z-index: 8;
     top: 0px;
     left: 0px;
@@ -55,12 +55,7 @@ header{
 
   
 }
-.pageheader{
-    width: 100%;
-    height: 80px;
-    position: relative;
-    background-color: transparent;
-}
+
 
 
 nav{
@@ -68,11 +63,10 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-width: 80vw;
+    width: 90vw;
     height: inherit;
+    
 
-   
-   
 }
 
 
@@ -101,17 +95,17 @@ nav{
     
 }
 
-nav ul{
-    width: inherit;
-    height: inherit;
 
+nav ul{
+    min-width: 500px;
+    height: inherit;
     display: flex;
     justify-content: space-between;
-    
+    flex-wrap: wrap;
 }
 
 nav ul li{
-    padding-left: 30px;
+    padding-left: 15pxpx;
     list-style: none;
     font-weight: bold;
     font-size: 15px;;
@@ -138,7 +132,7 @@ nav ul li a:hover{
 
 nav button{
     top: 0px;
-    width: 100px;
+    width: 65px;
     height: 40px;
     background-color: transparent;
     color: #00ffff;
@@ -154,45 +148,18 @@ nav button{
 }
 
 
-.subNavContainer{
-    position: sticky;
-    top: 100px;
-    background-color: rgb(0, 255, 255);
-    backdrop-filter: blur(30px);
-    height: 40px;
-    width: inherit;
-    display: flex;
-    justify-content: center;
-    z-index: 10;
-    box-shadow: 1px 1px 10px black;
-    
-}
-
-.subNav{
-    position: relative;
-    min-width: 80vw;
-    height: 40px;
-  
-    
-   
-}
-.subNavContainer .userFeatures{
-       display: flex;
-    flex-direction: row;
-    padding: 5px;
-}
-
-.userFeatures button{
-    width: 80px;
-    border-radius: 10px;
-    border: 1px solid black;
-    margin-inline: 20px;
-}
 
 /*this is a sample for the other pages*/
+.pageheader {
+    width: 100%;
+    height: 80px;
+    position: relative;
+    background-color: transparent;
+}
+
 .container{
    position: relative;
-   width: 90%;
+   width: 80vw;
    height: auto;
    padding-top: 150px;
    display: flex;
@@ -206,8 +173,8 @@ nav button{
     position: relative;
     height: auto;
     color: white;
-    margin-bottom: 200px;
-    width: 90%;
+    margin-bottom: 100px;
+    width: inherit;
     margin-inline: auto;
 
 
@@ -231,6 +198,7 @@ nav button{
     color: #00ffff;
     margin-bottom: 50px;
     text-align: center;
+    padding-bottom: 30px;
     
 }
 .home .toollogo {
@@ -432,6 +400,46 @@ button:hover{
 
 
 /*this is the definitions for the stores page*/
+.store_header{
+    width: 100%;
+    height: 40px;
+    background-color: #00ffff;
+    border-radius: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    position: relative;
+    border: 1px solid black;
+    box-shadow: 1px 1px 8px black;
+    margin-bottom: 30px;
+
+}
+.search_store{
+    width: 80%;
+    height: 35px;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    position: relative;
+
+}
+.store_header input{
+    background-color: transparent;
+    height: 100%;
+    width: 90%;
+    border: 1px solid black;
+    border-radius: inherit;
+    padding-inline: 20px;
+}
+.store_header img{
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    right: 20px;
+    background-color: inherit;
+}
 .store .innerDiv{
     display: flex;
     flex-direction: row;
@@ -531,14 +539,47 @@ overflow: scroll;
 }
 
 /*this is the appointment page*/
-.appointment .appointment_pallet{
+.appointment {
     display: flex;
-    align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: #0d2a59;
+}
+.appointment h2{
+    text-align: center;
+}
+.appointment .appointment_pallet h4{
+    margin-top: 10px;
+}
+.appointment .appointment_pallet{
+    background-color: rgb(0, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    max-width: 500px;
+    align-self: center;
+    border-radius: 30px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+
 }
 
+.appointment input{
+    width: 100%;
+    height: 30px;
+    margin-top: 10px;
+    padding-inline: 10px;
+    border-radius: 5px;
+    border: 0px;
+}
+
+.appointment button{
+    align-self: center;
+    width: 100px;
+    height: 40px;
+    border-radius: 4px;
+    border: 0px;
+    background-color: #00ffff;
+    
+}
 
 
 
@@ -550,43 +591,22 @@ overflow: scroll;
 .howTo >div{
     display: flex;
     justify-content: space-between;
+    max-width: 1000px;
     
     
 }
-#sideMenuHead {
-    position: relative;
-    top: 0px;
-    left: 30px;
-    background-color: rgba(19, 39, 39, 0.8);
-    border-radius: 50%;
-    font-weight: bolder;
-    cursor: pointer;
-    transition: 0.3s;
-    z-index: 11;
-    display: flex;
 
-}
- #sideMenuHead img{
-    position: absolute;
-    justify-self: center;
-    align-self: center;
-    width: 30px;
-    height:  30px;
-    margin: 5px;
-
-}
 #sideMenuHead :nth-child(2){
     display: block;
 }
 
 
 .sideMenu{
-    min-width: 250px;
-    margin-right: 40px;
+    min-width: 300px;
+    margin-right: 0px;
     overflow: scroll;
     height: auto;
     transition: 0.8s;
-    display: block; 
 }
 
 
@@ -597,7 +617,7 @@ overflow: scroll;
     border-bottom: 1px solid hwb(180 0% 0%);
     padding: 10px 10px;
     margin-right: 10px;
-    font-size: 12px;
+    font-size: 14px;
 
 }
 
@@ -622,12 +642,9 @@ overflow: scroll;
 
 .mainMenu{
     width: auto;
-    padding: 20px;
+    padding-inline: 20px;
     overflow: scroll;
-    height: auto;
-    padding: 50px;
-    border-bottom: 3px solid #00ffff;
-    /* background-color: red; */
+    height: 900px;
     
 }
 
@@ -638,8 +655,9 @@ overflow: scroll;
 }
 
 .howTo p{
-    font-size: 13px;
+    font-size: 14px;
     text-align: left;
+    margin-bottom: 10px;
     
 }
 
@@ -652,11 +670,16 @@ overflow: scroll;
 
 
 /*definitions for the contact page*/
-
-.contact >div{
-    width: inherit;
+.contact{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    flex-direction: column;
+}
+.contact >div{
+    max-width: 1000px;
+    display: flex;
+    justify-content: center;
+    gap: 100px;
     align-self: center;
 
 }
@@ -688,7 +711,7 @@ overflow: scroll;
     background-image: linear-gradient(120deg, rgb(255, 255, 255, 0), rgb(0, 255, 255, 0.4));
     padding: 20px;
     border-radius: 30px;
-    min-width: inherit;
+    min-width: 300px;
     backdrop-filter: blur(5px);
 }
 
@@ -777,46 +800,34 @@ footer p{
 
 
 
-@media only screen and (max-width: 900px){
-
+@media only screen and (max-width: 830px){
     header{
-        height: 80px;
+        background-color: #051023;
+    }
+  
+    nav {
+        width: 100%;
+        position: absolute;
     }
 
-    nav{
-      
-        min-width: 90%;
-        justify-content: space-between;
-        /* margin-inline: 100px;   */
-    }
-      
-     nav ul{
+    nav ul{
         position: absolute;
-        display: flex;
         flex-direction: column;
-        right: 0px;
-        top: 80px;
-        width: 100%;
-        padding: 20px;
-        height: auto;
-        background-color: #020e21;
-        backdrop-filter: blur(90px);
+        background-color: rgb(5, 16, 35,0.9);
+        backdrop-filter: blur(80px);
+        min-width: 100vw;
+        margin-inline: auto;
+           align-items: center;
+           left: 0px;
+           top: 90px;
+           padding: 20px;
         
     }
-   
-   
- 
     nav ul li{
-        border-bottom: 1px solid #00ffff;
-        margin-inline: 80px;
         padding-top: 20px;
-        transition: 0.5s;
-        right: 0px;
     }
-    
     nav ul li a{
-        font-size: 20px;
-        text-align: right;
+        color: white ;
     }
 
     nav button{
@@ -843,15 +854,15 @@ footer p{
 
     .container{
         padding-top: 0px;
-        width: 90%;
-        margin-inline: auto;
+        width: 100%;
     }
 
     .container >div{
-        width: 100%;
+        width: 90%;
+        height: auto;
     }
 h1 {
-    font-size: 60px;
+    font-size: 55px;
     margin-bottom: 20px;
     border-bottom: 1px solid white;
 }
@@ -863,10 +874,19 @@ h1 {
         top: 10px;
     }
 
+.howTo .mainMenu{
+    /* position: absolute; */
+    min-width: 300px;
+    background-color: grey;
+}
 
     .contact  >div{
         flex-direction: column;
         gap: 30px;
+    }
+    
+    .appointment_pallet {
+        width: 500px;
     }
 }  
 
@@ -874,32 +894,20 @@ h1 {
 
 
 @media only screen and (max-width: 426px) {
-
-    .nav_icon img {
-            width: 35px;
-            height: 35px;
-        }
-    .home{
-        padding-top: 30px;
-    }
-    .home p{
-        font-size: 13px;
-        line-height: 20px;
-    }
-    .service .innerDiv{
-        /* display: flex; */
-        flex-direction: column;
-    }
+    
     .store .innerDiv {
-        gap: 20px;
+        gap: 10px;
         display: flex;
         flex-direction: column;
+    
 
+    }
+    .storeItems{
+        width: auto;
     }
 
     .mainMenu {
-
-        padding: 0px;
+        width: 100%;
     }
 
     .items{
@@ -914,45 +922,53 @@ h1 {
 
     }
 
-    .items:hover{
-        -ms-transform-origin-z: 0px;
-            box-shadow: 0px 0px 0px transparent;
+        .items:nth-child(even):hover {
+            -ms-transform-origin-z: 0px;
+            box-shadow: 1px 1px 8px transparent;
             transform: skewY(0deg);
             cursor: pointer;
-    }
+    
+        }
+    
+        .items:nth-child(odd):hover {
+            box-shadow: 1px 1px 10px transparent;
+            transform: skewY(0deg);
+            cursor: pointer;
+    
+        }
     .items p, .items .sub_features{
         display: none;
     }
     .items .title {
         width: auto;
+        height: 50px;
         border-radius: 10px;
         margin-inline: 20px;
             background-color: rgb(0, 255, 255, 0.2);
             
     }
+    .items .title:hover{
+        box-shadow: 1px 1px 8px #00ffff;
+    }
 
 
     .howTo >div{
         flex-direction: column;
+    } 
+    .appointment_pallet{
+        width: 300px;
     }
+
 }
 
 
 
 
+
+
+
+
 @media only screen and (max-width: 320px) {
-    .nav_icon img{
-        width: 30px;
-        height: 30px;
-    }
-   .container >div{
-    margin-bottom: 60px;
-    width: 100%;
-   }
 
-    h1{
-        font-size: 40px;
-        margin-bottom: 20px;
-    }
-
+   
 }
