--- a/index.css
+++ b/index.css
@@ -306,23 +306,23 @@ button:hover{
 }
 
 
-.items{
+.service .items{
     position: relative;
-    width: 250px;
-    height: 250px;
-    border-radius: 30px;
+    width: 200px;
+    height: 200px;
+    border-radius: 20px;
     border: 1px solid #00ffff;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
     overflow: hidden;
     overflow: hidden;
     transition: 0.5s;
     background-color: rgb(0, 255, 255, 0.2);}
 
-.items .title{
+.service .items .title{
     height: 70px;
     width: inherit;
     border: 1px solid #00ffff;
-    border-radius: 30px 30px 0 0;
+    border-radius: 20px 20px 0 0;
     text-align: center;
     transition: 0.5s;
     color: #00ffff;
@@ -333,7 +333,7 @@ button:hover{
    
 
 }
-.items:nth-child(even):hover{
+.service .items:nth-child(even):hover{
     -ms-transform-origin-z: 20px;
     box-shadow: 1px 1px 8px #00ffff;
     transform: skewY(2deg);
@@ -341,14 +341,14 @@ button:hover{
 
 }
 
-.items:nth-child(odd):hover{
+.service .items:nth-child(odd):hover{
     box-shadow: 1px 1px 10px #00ffff;
     transform: skewY(-2deg);
     cursor: pointer;
     
 }
 
-.items .title:hover{
+.service .items .title:hover{
     transition: 0.5s;
     color: rgb(255, 255, 255);
     font-weight: bolder;
@@ -357,7 +357,7 @@ button:hover{
 }
 
 
-.items p{
+.services .items p{
     font-size: 13px;
     padding-inline: 5px;
     text-align: center;
@@ -385,7 +385,7 @@ button:hover{
     font-size: 12px;
     width: 50%;
     height: inherit;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding-inline: 20px;
     border-radius: 4px;
     transition: 0.4s;
@@ -615,9 +615,9 @@ overflow: scroll;
 .sideMenu ul li{
     list-style: none;
     border-bottom: 1px solid hwb(180 0% 0%);
-    padding: 10px 10px;
+    padding: 0px 10px;
     margin-right: 10px;
-    font-size: 14px;
+    font-size: 12px;
 
 }
 
@@ -640,12 +640,71 @@ overflow: scroll;
 
 }
 
-.mainMenu{
+.store .mainMenu{
     width: auto;
-    padding-inline: 20px;
+    padding-inline: 0px;
     overflow: scroll;
     height: 900px;
     
+}
+
+.store .items {
+    position: relative;
+    width: 150px;
+    height: 300px;
+    border-radius: 20px;
+    border: 1px solid #00ffff;
+    margin-bottom: 10px;
+    overflow: hidden;
+    overflow: hidden;
+    transition: 0.5s;
+    background-color: rgb(0, 255, 255, 0.2);
+}
+
+.store .items .title {
+    height: 70px;
+    width: inherit;
+    border: 1px solid #00ffff;
+    border-radius: 20px 20px 0 0;
+    text-align: center;
+    transition: 0.5s;
+    color: #00ffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+
+
+}
+.store .items p{
+    display: none;
+}
+.store .items img{
+    width: 150PX;
+    height: 150PX;
+}
+
+.store .items:nth-child(even):hover {
+    -ms-transform-origin-z: 20px;
+    box-shadow: 1px 1px 8px #00ffff;
+    transform: skewY(2deg);
+    cursor: pointer;
+
+}
+
+.store .items:nth-child(odd):hover {
+    box-shadow: 1px 1px 10px #00ffff;
+    transform: skewY(-2deg);
+    cursor: pointer;
+
+}
+
+.store .items .title:hover {
+    transition: 0.5s;
+    color: rgb(255, 255, 255);
+    font-weight: bolder;
+
+
 }
 
 .mainMenu h3{
