--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body{
 .shader{
     position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     background-color: rgb(11, 16, 67,0.3);
     backdrop-filter: blur(10px);
     z-index: 8;
@@ -24,7 +24,7 @@ body{
 }
 .filtered_background{
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     position: fixed;
     background-size: contain;
     animation-name: bodybackground;
